# ferenda

./: .dockerignore  .envrc  .gitattributes  .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.slim  LICENSE.txt  MANIFEST.in  README.GENERATE.rst  README.md  README.rst  REWRITE.md  SOU-COMPRESSION.md  USAGE_REVIEW.md  appveyor.yml  docker-compose.prod.yml  docker-compose.yml  ferenda-setup.py  install.sh  pyproject.toml  requirements.in  requirements.py2.txt  requirements.py3.txt  requirements.rtfd.txt  requirements.txt  setup.py  testResourceLoader.py  tox.ini
.claude/: settings.json
.claude/agents/: commit-planner.md  conventions-enforcer.md  docs-sync.md  plan-reviewer.md
.claude/hooks/: check-layers.py  conventions-reminder.py  git-guard.py  stop-mechanical-checks.py
.github/workflows/: deploy.yml
accommodanda/: README.md  __init__.py  build.py  config.py  patchsource.py
accommodanda/api/: README.md  app.py  auth.py  edit.py  editcart.py  editcontent.py  mcp.py  ops.py  patch.py
accommodanda/avg/: __init__.py  download.py  legacy.py  model.py  parse.py
accommodanda/coe/: __init__.py  download.py  model.py  parse.py
accommodanda/dv/: __init__.py  download.py  identity.py  import_legacy.py  legacy.py  model.py  namedcases.py  naming.py  parse.py  structure.py  word.py
accommodanda/eurlex/: __init__.py  annotate.py  bulk.py  casenames.py  definitions.py  download.py  lang.py  model.py  parse.py  parse_html.py  parse_pdf.py  preamble_analyzer_prompt.txt  structure.py
accommodanda/forarbete/: __init__.py  download.py  fk.py  genomforande.py  jamforelse.py  kommentar.py  legacy.py  legacy_formats.py  lydelse.py  model.py  parse.py  propkb.py  riksdagen.py  rskr.py  soukb.py  structure.py  tabell.py
accommodanda/foreskrift/: __init__.py  agencies.py  download.py  harvest.py  legacy.py  model.py  mtfs.py  parse.py  skvfs.py  structure.py
accommodanda/hudoc/: __init__.py  download.py  model.py  parse.py
accommodanda/icc/: __init__.py  download.py  model.py  parse.py
accommodanda/icrc/: __init__.py  download.py  model.py  parse.py
accommodanda/lib/: __init__.py  annstore.py  browser.py  casenaming.py  catalog.py  coe.py  coe_ids.py  compress.py  concepts.py  datasets.py  diff.py  dump.py  errors.py  eu_structure.py  eucasenaming.py  facets.py  facsimile.py  feeds.py  git.py  harvest.py  history.py  labels.py  lagrum.py  layout.py  legacy_import.py  llm.py  markdown.py  net.py  patch.py  patchit.py  pdftext.py  pins.py  poi.py  poi_worker.py  regeringen.py  render.py  resolve.py  runlog.py  search.py  text.py  (+2 more)
accommodanda/patches/: README.md
accommodanda/remisser/: ai_analyze.py  download.py  model.py  parse.py  sentiment_prompt.txt
accommodanda/sfs/: __init__.py  __main__.py  _validate.py  asgit.py  assembler.py  atmf.py  begrepp.py  convention.py  correspond.py  (+16 more)
doc/: HACKING.md  Makefile  advanced.rst  changelog.rst  citationparsing.rst  conf.py  createdocrepos.rst  docmetadata.rst  elementclasses-part.xhtml  elementclasses.py  elementclasses.rst  external-dbs.rst  facets.rst  firststeps-api.py  firststeps.rst  firststeps.sh  fsmparser-example.py  fsmparser-result.xml  fsmparser.rst  index.rst  intro-example.py  intro-example.sh  intro.rst  keyconcepts-file.py  keyconcepts.rst  linkeddata.rst  make.bat  metadata-result.xml  metadata.py  news.rst  readers.rst  restapi.rst  rfc.xsl  rfcs.py  testing.rst  toc.rst  w3cstandards.py  wsgi.rst
docker/: build  elasticsearch-jvm.options  nginx.conf  policy-rc.d  setup.sh  start-fuseki.sh  supervisord.conf  uwsgi.ini
docs/: README.md  accommodanda-open-findings-2026-07-02.md  conventions.md  deploy-vps.md  local-llm.md  prd-sfs-history-as-git.md  prd-wiki-markdown-and-guidance.md  review-accommodanda-2026-07-01.md  review-accommodanda-2026-07-06.html  review-accommodanda-conventions-2026-07-02.md  skvfs-f5-harvest.md
ferenda/: __init__.py  citationparser.py  citationpatterns.py  compat.py  compositerepository.py  decorators.py  describer.py  devel.py  document.py  documententry.py  documentrepository.py  documentstore.py  errors.py  facet.py  feed.py  feedset.py  fsmparser.py  fulltextindex.py  layeredconfig.py  legalref.py  legaluri.py  manager.py  newscriteria.py  old-wsgiapp.py  pdfanalyze.py  pdfdocumentrepository.py  pdfreader.py  rdfa.py  requesthandler.py  resourceloader.py  resources.py  testutil.py  textreader.py  toccriteria.py  tocpage.py  tocpageset.py  transformer.py  triplestore.py  uriformats.py  uriformatter.py  (+4 more)
site/: ferenda-build.py  parse.txx
test/: __init__.py  examplerepos.py  functionalDocExamples.py  functionalSources.py  functionalTestLegalURI.py  integrationAPI.py  integrationDV.py  integrationFulltextIndex.py  integrationLagen.py  integrationLegalRef.py  integrationLegalURI.py  integrationMyndFskr.py  integrationOfftryck.py  integrationPDFAnalyze.py  integrationRFC.py  integrationRegeringen.py  integrationSFS.py  integrationSwedishLegalSource.py  integrationTestExamples.py  integrationTestTripleStore.py  integrationTripleStore.py  integrationWiki.py  quiet.py  run-doc-examples.py  testCitationParser.py  testCitations.py  testCompositeRepo.py  testConfig.py  testDecorators.py  testDescriber.py  testDevel.py  testDoc.py  testDocEntry.py  testDocRepo.py  testDocStore.py  testDocument.py  testElements.py  testEurlex.py  testExamples.py  testFSMParser.py  (+124 more)
tools/: README.txt  analyze-error-log.py  backupsettings.json  build.sh  buildclient.sh  compress_downloaded.py  coverage.sh  deploy.txt  es-count-types.sh  esbackup.txt  eurlex_pipeline.sh  fabfile.py  fetch_poi.sh  fix-fuseki.txt  functional.sh  fuseki-config.ttl  golden_dv.py  golden_dv_legacy.py  golden_dv_structure.py  golden_eurlex.py  golden_sfs.py  importresources.py  importschemas.py  integration.sh  list-debug-files.sh  mediawiki_to_markdown.py  migrate_layout.py  migrate_site_content.py  nginx-lagen.nu-redirects.conf  nginx-prod.conf  nginx-staging.conf  nginx-uwsgi.ini  nginx.conf  parse-bench.py  refresh.sh  runsample.sh  rununittest.py  setenv.cmd  setup-virtenvs.cmd  test.cmd  (+4 more)
(+1472 files in other folders)
