[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ferenda"
version = "0.3.1.dev1"
description = "Transform unstructured document collections to structured Linked Data"
readme = "README.rst"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Staffan Malmgren", email = "staffan.malmgren@gmail.com" },
]
keywords = ["rdf", "linkeddata", "parsing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
    "beautifulsoup4",
    "fastapi",
    "jpype1>=1.7.1",
    "lark",
    "lxml",
    "opensearch-py",
    "pillow",
    "python-dotenv>=1.2.2",
    "rdflib",
    "requests",
    "ruamel-yaml>=0.19.1",
    "urllib3",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "psutil",
    "pytest",
]

# PEP 735 group: unlike optional-dependencies above, uv installs this on a
# plain `uv sync`, so `pytest` is available without `--extra dev`.
[dependency-groups]
dev = [
    "coverage",
    "psutil",
    "pytest",
]

[project.scripts]
lagen = "accommodanda.build:main"

[project.urls]
Homepage = "https://github.com/staffanm/ferenda/"

[tool.setuptools.packages.find]
exclude = ["test", "docs", "site", "data"]

[tool.setuptools]
include-package-data = true
zip-safe = false
