[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ferenda"
version = "0.3.1.dev1"
description = "Transform unstructured document collections to structured Linked Data"
readme = "README.rst"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Staffan Malmgren", email = "staffan.malmgren@gmail.com" },
]
keywords = ["rdf", "linkeddata", "parsing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
    "beautifulsoup4",
    "fastapi",
    # starlette's TestClient (used in-process for static browse-page generation)
    # requires httpx2; without it starlette falls back to httpx with a deprecation
    # warning on every import.
    "httpx2",
    "jpype1>=1.7.1",
    "lark",
    "lxml",
    "opensearch-py",
    "pillow",
    "python-dotenv>=1.2.2",
    "rdflib",
    "requests",
    "ruamel-yaml>=0.19.1",
    "urllib3",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "psutil",
    "pytest",
    "ruff",
    "ty",
]

# PEP 735 group: unlike optional-dependencies above, uv installs this on a
# plain `uv sync`, so `pytest` is available without `--extra dev`.
[dependency-groups]
dev = [
    "coverage",
    "psutil",
    "pytest",
    "ruff",
    "ty",
]

[project.scripts]
lagen = "accommodanda.build:main"

[project.urls]
Homepage = "https://github.com/staffanm/ferenda/"

[tool.setuptools.packages.find]
exclude = ["test", "docs", "site", "data"]

[tool.setuptools]
include-package-data = true
zip-safe = false

# --- Linting / type checking ---
# Scoped to the active accommodanda/ package; the legacy ferenda/ and lagen/
# trees are out of scope. The .claude Stop hook runs `ruff check` + `ty check`
# on the accommodanda/ files edited each turn. Run the whole package by hand:
#   uv run ruff check accommodanda
#   uv run ty check accommodanda

[tool.ruff]
target-version = "py310"
# Only the rebuilt package; never lint the legacy tree.
include = ["accommodanda/**/*.py"]
extend-exclude = ["ferenda", "lagen", "site", "doc", "tools", "test"]

[tool.ruff.lint]
# F (pyflakes) + I (import grouping, matches CLAUDE.md) are high-signal and
# enforced by the Stop hook. ANN (annotation coverage) is NOT enabled: the
# package is mostly unannotated, so it would block every edited function.
# Measure coverage on demand with `uv run ruff check --select ANN accommodanda`.
select = ["F", "I"]

[tool.ty.src]
include = ["accommodanda"]
