[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ferenda"
version = "0.3.1.dev1"
description = "Transform unstructured document collections to structured Linked Data"
readme = "README.rst"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Staffan Malmgren", email = "staffan.malmgren@gmail.com" },
]
keywords = ["rdf", "linkeddata", "parsing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
    "beautifulsoup4",
    # Brotli codec for the on-disk artifact/ + generated/ compression
    # (lib/compress): ~3x smaller than gzip on the JSON/HTML payload and a
    # faster decompress; the served .br bytes are what nginx hands out as-is.
    "brotli",
    "fastapi",
    # starlette's TestClient (used in-process for static browse-page generation)
    # requires httpx2; without it starlette falls back to httpx with a deprecation
    # warning on every import.
    "httpx2",
    "jpype1>=1.7.1",
    "lark",
    "lxml",
    "opensearch-py",
    "pillow",
    "python-dotenv>=1.2.2",
    "rdflib",
    "requests",
    "ruamel-yaml>=0.19.1",
    "urllib3",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "pip-audit",
    "psutil",
    "pytest",
    "ruff",
    "ty",
]

# PEP 735 group: unlike optional-dependencies above, uv installs this on a
# plain `uv sync`, so `pytest` is available without `--extra dev`.
[dependency-groups]
dev = [
    "coverage",
    "pip-audit",
    "psutil",
    "pytest",
    "ruff",
    "ty",
]

[project.scripts]
lagen = "accommodanda.build:main"

[project.urls]
Homepage = "https://github.com/staffanm/ferenda/"

[tool.setuptools.packages.find]
exclude = ["test", "docs", "site", "data"]

[tool.setuptools]
include-package-data = true
zip-safe = false

# --- Linting / type checking ---
# Scoped to the active accommodanda/ package; the legacy ferenda/ and lagen/
# trees are out of scope. The .claude Stop hook runs `ruff check` + `ty check`
# on the accommodanda/ files edited each turn. Run the whole package by hand:
#   uv run ruff check accommodanda
#   uv run ty check accommodanda

[tool.ruff]
target-version = "py310"
# Only the rebuilt package; never lint the legacy tree.
include = ["accommodanda/**/*.py"]
extend-exclude = ["ferenda", "lagen", "site", "doc", "tools", "test"]

[tool.ruff.lint]
# High-signal sets, enforced by the Stop hook (see docs/conventions.md):
#   F (pyflakes), I (import grouping) — baseline
#   B (bugbear) — real bug shapes (zip strict, unused loop vars, ...)
#   BLE (blind except) — rule:no-catch-log-continue; the sanctioned
#       resilience points carry cited `# noqa: BLE001 — reason`
#   PLC0415 (in-function imports) — rule:no-infunction-imports
#   S110/S112 (try-except-pass/continue) — silent swallowing
#   RUF100 (unused noqa) — keeps the citations honest
# NOT enabled: ANN (package is mostly unannotated — measure on demand with
# `ruff check --select ANN`), ERA (5/5 false positives on prose comments),
# SIM/RET (would churn the deliberately-faithful tokenizer port).
select = ["F", "I", "B", "BLE", "PLC0415", "S110", "S112", "RUF100"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's `Depends(...)`-in-default idiom.
"accommodanda/api/app.py" = ["B008"]
"accommodanda/api/ops.py" = ["B008"]
"accommodanda/api/auth.py" = ["B008"]
"accommodanda/api/edit.py" = ["B008"]
# POI/jpype classes resolve only after startJVM — the one sanctioned
# in-function-import site (rule:no-infunction-imports).
"accommodanda/dv/word.py" = ["PLC0415"]

[tool.ty.src]
include = ["accommodanda"]

[tool.pytest.ini_options]
# Make a bare `pytest` (or `pytest test/`) collect exactly the new suites.
# The legacy unittest files (test/integration*.py, test/test[A-Z]*.py,
# test/functional*.py, examplerepos.py, quiet.py) don't import under modern
# Python and are out of scope -- never "fix" them (rule:legacy-read-only).
testpaths = ["test"]
python_files = ["test_*.py"]
# test/files/ is fixture data (some of it happens to be named test_*.py)
addopts = "--ignore=test/files"
